--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:id="@+id/tv_started_subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margintop="15dp"
+
         android:text="@string/started_subtitle"
         android:textColor="#E91E63"
         android:textSize="21sp"
@@ -34,35 +34,37 @@
 
         />
 
-    <!--        style="@style/ButtonWhite"-->
 
-    />
+    <!--    android:ContentDescription="@string/illustration_img"-->
 
     <ImageView
         android:id="@+id/img_illustration_started"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ContentDescription="@string/illustration_img"
+
         android:src="@drawable/illustration_started"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0"
+        tools:ignore="ContentDescription" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@id/nextButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/nextButton"
+        android:layout_width="367dp"
+        android:layout_height="53dp"
         android:text="@string/btn_login"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="598dp"
-        tools:ignore="MissingConstraints"/>
+        app:layout_constraintTop_toTopOf="@+id/img_illustration_started"
+        app:layout_constraintVertical_bias="0.917"
+        tools:ignore="MissingConstraints" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@id/btn_register"
+        android:id="@+id/btn_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btn_register"
@@ -72,7 +74,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
     <!--        style="@style/ButtonWhite"-->
-    />
+
 
 
 
