--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:id="@+id/tv_started_subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margintop="15dp"
+
         android:text="@string/started_subtitle"
         android:textColor="#E91E63"
         android:textSize="21sp"
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_started_title"
 
         />
-
+<!--    android:layout_margintop="15dp"-->
     <!--        style="@style/ButtonWhite"-->
 
     />
@@ -42,7 +42,7 @@
         android:id="@+id/img_illustration_started"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ContentDescription="@string/illustration_img"
+
         android:src="@drawable/illustration_started"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,9 +50,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+<!--    android:ContentDescription="@string/illustration_img"-->
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@id/nextButton"
+        android:id="@+id/nextButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btn_login"
@@ -62,7 +63,7 @@
         tools:ignore="MissingConstraints"/>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@id/btn_register"
+        android:id="@+id/btn_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/btn_register"
